_sass/main.scss
* {
  color: $foreground-color;
  font-family: "Avenir Next", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

a#title {
  @include animated_underline;
  font-size: 300%;
  text-decoration: none;
  display: inline-block;
  margin: 20px 0;
  font-family: "Century Gothic", Futura, "Avenir Next", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: $accent-color;
}

#particles-js {
  position: fixed;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: 50% 50%;
}

h1, h2, h3, h4, h5, h6 {
  color: $accent-color;

  * {
    color: $accent-color;
  }
}

h2 {
  font-weight: 700;
}

p, li:not(nav) {
  font-size: 1.2em;
}

html, body {
  height: 100%;
  margin: 0;
}

body {
  background-color: $background-color;
}

p#footer {
  display: flex;
  margin: 200px auto auto;
  align-items:center;
  justify-content:center;
  font-size: small;
  position: relative;
  bottom: 60px;
  height: 60px;

}

div#main {
  width: 70%;
  padding-bottom: 60px;
  margin: 0 auto 0 auto;
  position: relative;
  min-height: calc(100% - 60px - 20px);
}

nav {
  text-align: center;
  overflow: auto;
  margin-bottom: 30px;

  ul {
    padding: 0;
    text-align: center;
    white-space: nowrap;
    overflow: hidden;
    display: inline-block;
    font-size: 0; // Prevents gap created by HTML newlines
    background-color: #898989;
    border-radius: 10px;

    > li {
      display: inline-block;
      margin: 0;

      > a {
        font-size: 25px;
        text-align: center;
        text-decoration: none;
        font-weight: 600;
        padding: 0 20px;
        color: $background-color;

        &:hover {
          text-decoration: underline;
        }

        &#currentPage {
          background-color: white;
        }
      }
    }
  }
}

input {
  color: black;
}

.highlighter-rouge {
  > .highlight {
    padding: 20px;
    overflow: auto;
    border-radius: 20px;
  }

  * {
    font-family: $monospace-hierarchy;
  }
}

